--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
           python main.py
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Update IP List
+          commit_message: Update ASN txt
