--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests urllib3==1.25.11
+          pip install requests==2.31.0 urllib3==1.25.11
       - name: Run Python
         run: |
           python main.py
